<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.pos.pucpr.webservicehomework.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_jsonListFragment"
            app:destination="@id/jsonListFragment" />
        <action
            android:id="@+id/action_homeFragment_to_xmlListFragment"
            app:destination="@id/xmlListFragment" />
    </fragment>
    <fragment
        android:id="@+id/jsonListFragment"
        android:name="com.pos.pucpr.webservicehomework.ui.fragments.JsonListFragment"
        android:label="@string/title_json_list"
        tools:layout="@layout/fragment_json_list" />
    <fragment
        android:id="@+id/xmlListFragment"
        android:name="com.pos.pucpr.webservicehomework.ui.fragments.XmlFormFragment"
        android:label="@string/title_xml_list"
        tools:layout="@layout/fragment_xml_list" />
</navigation>