<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.exercise2.DateDiffFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_diff_date" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_initial_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_initial_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_finish_date">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_finish_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/App.Components.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_diff_date"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_number_sequence" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_number_sequence">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_number_sequence"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="1234567890;"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/App.Components.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_order"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    style="@style/TextAppearance.MaterialComponents.Headline5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/header_mimic" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phase">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_mimic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    style="@style/App.Components.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/action_diff_date"
                    android:textAlignment="center" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>