<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_json_list"
            style="@style/App.Components.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:enabled="false"
            android:text="@string/action_go_json_list"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_xml_list"
            style="@style/App.Components.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:enabled="false"
            android:text="@string/action_go_xml_list"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_calc_diff"
            style="@style/App.Components.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:enabled="true"
            android:text="@string/action_diff_date"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="@android:color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>